docs: prevent elements from disappearing behind header when scrolled to
added an invisible padding to targetable elements [id], so they are
pushed down and don't disappear behind the header when scrolled to

--- a/docs/index.css
+++ b/docs/index.css
@@ -57,7 +57,7 @@ header, section, .fullscreen {
 }
 
 section, .fullscreen {
-  padding-top: 11rem;
+  padding-top: 5rem;
 }
 
 .smooth-scroll {
@@ -67,7 +67,7 @@ section, .fullscreen {
 }
 
 .fullscreen h1 {
-  margin-top: 7rem;
+  margin-top: 13rem;
 }
 
 .scroll-btn {
@@ -76,7 +76,7 @@ section, .fullscreen {
 
 @media screen and (min-height: 660px) {
   .fullscreen h1 {
-    margin-top: 12rem;
+    margin-top: 18rem;
   }
   .scroll-btn {
     margin-top: 12rem;
@@ -85,7 +85,7 @@ section, .fullscreen {
 
 @media screen and (min-height: 900px) {
   .fullscreen h1 {
-    margin-top: 24rem;
+    margin-top: 30rem;
   }
   .scroll-btn {
     margin-top: 24rem;
@@ -130,19 +130,19 @@ html:not(.flex-center) .fullscreen>div {
   margin-bottom: 0;
 }
 
-#start {
+section:nth-child(2) {
   background: #faf7fc;
 }
 
-#usage {
+section:nth-child(3) {
   background: #f6effa;
 }
 
-#docs {
+section:nth-child(4) {
   background: #f1e7f7;
 }
 
-#legal, footer>div {
+section:nth-child(5), footer>div {
   background: #eddff5;
 }
 
@@ -200,30 +200,59 @@ footer>div.row p {
   }
 }
 
-h1[id], h2[id], h3[id], h4[id], h1[data-to], h2[data-to], h3[data-to], h4[data-to] {
+h1[id] span, h2[id] span, h3[id] span, h4[id] span {
   position: relative;
   transition: padding 200ms ease-out;
   cursor: pointer;
 }
 
-h1[id]::before, h2[id]::before, h3[id]::before, h4[id]::before, h1[data-to]::before, h2[data-to]::before, h3[data-to]::before, h4[data-to]::before {
+h1[id] span::before, h2[id] span::before, h3[id] span::before, h4[id] span::before {
   content: "#";
   position: absolute;
   left: 0;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  bottom: 0%;
+  transform: translateX(-50%);
   opacity: 0;
   transition: opacity 0.3s ease-out;
 }
 
-h1[id]:hover, h2[id]:hover, h3[id]:hover, h4[id]:hover, h1[data-to]:hover, h2[data-to]:hover, h3[data-to]:hover, h4[data-to]:hover {
+h1[id] span:hover, h2[id] span:hover, h3[id] span:hover, h4[id] span:hover {
   padding-left: 2rem;
 }
 
-h1[id]:hover::before, h2[id]:hover::before, h3[id]:hover::before, h4[id]:hover::before, h1[data-to]:hover::before, h2[data-to]:hover::before, h3[data-to]:hover::before, h4[data-to]:hover::before {
+h1[id] span:hover::before, h2[id] span:hover::before, h3[id] span:hover::before, h4[id] span:hover::before {
   opacity: 0.5;
 }
 
 .allow-overflow {
   overflow: auto;
+}
+
+/* Add invisible padding to top of targetable elements,
+so they're not hidden under the header when scrolled to top */
+
+[id] {
+  padding-top: 90px;
+  margin-top: -90px;
+}
+
+@media screen and (max-width: 785px) {
+  [id] {
+    padding-top: 110px;
+    margin-top: -110px;
+  }
+}
+
+@media screen and (max-width: 545px) {
+  [id] {
+    padding-top: 145px;
+    margin-top: -145px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  [id] {
+    padding-top: 175px;
+    margin-top: -175px;
+  }
 }
